syntax = "proto3";

option csharp_namespace = "ThreegRPCApi";

package API;

service Departments{
	rpc GetAll (GetAllDepartmentsRequest) returns (GetAllDepartmentsResponse);
	rpc Add(AddDepartmentRequest) returns (AddDepartmentResponse);
}

message GetAllDepartmentsRequest{};

message GetAllDepartmentsResponse{
	repeated Department Departments = 1;
}

message Department{
	int32 id = 1;
	string name = 2;
	string location = 3;
	int32 employeeCount =4;
}

message AddDepartmentRequest{
	Department department = 1;
}

message AddDepartmentResponse{
	Department department = 1;
}

////////////////////////////////////////////////////////

service	Employees{
	rpc GetByDepartmentId(GetByDepartmentIdRequest) returns (GetByDepartmentIdResponse);
	rpc AddEmployee(AddEmployeeRequest) returns (AddEmployeeResponse);
	rpc FireEmployee(FireEmployeeRequest) returns (FireEmployeeResponse);
}

message GetByDepartmentIdRequest{
	int32 departmentId = 1;
}

message GetByDepartmentIdResponse{
	repeated Employee employees = 1;
}

message Employee{
	int32 Id = 1;
	int32 DepartmentId = 2;
	string firstName = 3;
	string lastName = 4;
	bool fired =5;
	Gender gender = 6;
}

enum Gender{
	FEMALE = 0;
	MALE = 1;
}

message AddEmployeeRequest{
	Employee employee = 1;
}

message AddEmployeeResponse{
	Employee employee = 1;
}

message FireEmployeeRequest{
	int32 id = 1;
}

message FireEmployeeResponse{
	Employee employee = 1;
}